Archive2/e8/84ca6b203f375b/main.cpp

struct A {
    auto self_() -> decltype(*this) { return this; }
    using self = decltype(((self_*)0)());
};

int main() {
    A::self x;
}